fixed spacing between bullets and list items

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --heading-font: titillium web;
     --body-font: roboto;
     --font-color: rgb(255, 255, 255); /* white (#ffffff) */
-    --list-margin: 1vh 0vw;
+    --list-margin: 1vh 20vw;
     --max-line-length: 750px;
     --para-padding: 0vh 20vw;
     --default-heading-size: 48px;
@@ -76,19 +76,22 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Headings that are page titles (e.g. About, Gallery, Contact) */
 .page-title {
-  margin-top: var(--page-title-top-margin);
+    margin-top: var(--page-title-top-margin);
 }
 
-/* Paragraph and list elements */
-p, li {
+/* Paragraph elements */
+p {
     font-family: var(--body-font);
     color: var(--font-color);
     max-width: var(--max-line-length);
     padding: var(--para-padding);
 }
 
-/* Properties specific to elements */
+/* List elements */
 li {
+    font-family: var(--body-font);
+    color: var(--font-color);
+    max-width: var(--max-line-length);
     margin: var(--list-margin);
 }
 
@@ -139,13 +142,13 @@ a:visited {
 
 /* Container with square JL logo and the "Jasmine Lang" text */
 #logo-box {
-  position: fixed;
-    left: var(--logo-box-left-position);
-    top: var(--logo-box-top-position);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+    position: fixed;
+      left: var(--logo-box-left-position);
+      top: var(--logo-box-top-position);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Actual logo image */
@@ -163,14 +166,14 @@ a:visited {
 
 /* Text attached to logo */
 #logo-name {
-  font-size: var(--logo-name-size);
-  color: var(--font-color);
-  font-weight: bold;
+    font-size: var(--logo-name-size);
+    color: var(--font-color);
+    font-weight: bold;
 }
 
 /* Container with links to different pages */
 .top-nav-tab {
-  padding: var(--top-nav-tab-padding);
+    padding: var(--top-nav-tab-padding);
 }
 
 
@@ -185,7 +188,7 @@ a:visited {
 #theater {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100vw;
-    height: calc(100vh - 52px);
+    height: calc(100vh - 55px);
     border-radius: 5px;
     margin: 0vh -7.5vw;
 }
@@ -211,19 +214,19 @@ a:visited {
 
 /* Container for #game-name and #press-start */
 #start-screen {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 95;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 95;
 }
 
 /* Text on top of the slides */
 #game-name {
     text-align: center;
     font-size: 72px;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, .75);
     margin: 0px 0px 30px 0px;
 }
 
@@ -238,7 +241,7 @@ a:visited {
     background-color: rgba(var(--secondary-color), 0.5);
     border: 2.5px solid rgba(var(--tertiary-color), 0.25);
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, .75);
     margin: 0px;
     display: flex;
     justify-content: center;
@@ -257,9 +260,9 @@ a:visited {
 /*|||||||||||||||||||| SLIDES AND ANIMATION ||||||||||||||||||||*/
 /* Class of each image in slideshow */
 .slide-img {
-    height: calc(100vh - 52px);
+    height: calc(100vh - 55px);
     width: 75vw;
-    background-size: calc(100vh - 52px);
+    background-size: calc(100vh - 55px);
     margin: auto;
     background: no-repeat center;
     opacity: .8;
